--- a/Friday.ERP.Client/Pages/Inventory/Dialogs/InventoryProductDialog.razor
+++ b/Friday.ERP.Client/Pages/Inventory/Dialogs/InventoryProductDialog.razor
@@ -39,22 +39,22 @@
                 <MudGrid Spacing="2">
                     @if (IsUpdate)
                     {
-                        <CustomRowWithTwoLabels FirstText="Code" SecondText="@Code"/>
+                        <CustomLabelAndLabel FirstText="Code" SecondText="@Code"/>
                     }
                     else
                     {
-                        <CustomRowWithLabelAndFieldString FirstText="Code" @bind-BindValue="@Code" Required="true"/>
+                        <CustomLabelAndStringField FirstText="Code" @bind-BindValue="@Code" Required="true"/>
                     }
-                    <CustomRowWithLableAndAutocomplete FirstText="Category" Required=@(!IsUpdate)
+                    <CustomLableAndAutocomplete FirstText="Category" Required=@(!IsUpdate)
                                                        Value="@CategoryName"
                                                        SearchFuncWithCancel="@CategorySearch"
                                                        ValueChanged="@CategoryChange"
                                                        OnClearButtonClick="@CategoryClear"/>
-                    <CustomRowWithLabelAndFieldString FirstText="Name" @bind-BindValue="@Name" Required=@(!IsUpdate)/>
+                    <CustomLabelAndStringField FirstText="Name" @bind-BindValue="@Name" Required=@(!IsUpdate)/>
                 </MudGrid>
                 <MudDivider DividerType="DividerType.FullWidth" Class="my-4"></MudDivider>
                 <MudGrid Spacing="2">
-                    <CustomRowWithLabelAndFieldLong FirstText="Stock" @bind-BindValue="@Stock" Required=@(!IsUpdate)/>
+                    <CustomLabelAndLongField FirstText="Stock" @bind-BindValue="@Stock" Required=@(!IsUpdate)/>
                 </MudGrid>
                 <MudDivider DividerType="DividerType.FullWidth" Class="mt-4"></MudDivider>
             </MudForm>
