--- a/Friday.ERP.Client/Pages/Invoice/Dialogs/TransactionDeliveryDialog.razor
+++ b/Friday.ERP.Client/Pages/Invoice/Dialogs/TransactionDeliveryDialog.razor
@@ -1,20 +1,20 @@
 ﻿<MudDialog>
     <DialogContent>
         <MudGrid Spacing="2">
-            <CustomRowWithTwoLabels FirstText="Address" SecondText="@Address"></CustomRowWithTwoLabels>
-            <CustomRowWithTwoLabels FirstText="Contact Person" SecondText="@ContactPerson"></CustomRowWithTwoLabels>
-            <CustomRowWithTwoLabels FirstText="Contact Phone" SecondText="@ContactPhone"></CustomRowWithTwoLabels>
+            <CustomLabelAndLabel FirstText="Address" SecondText="@Address"></CustomLabelAndLabel>
+            <CustomLabelAndLabel FirstText="Contact Person" SecondText="@ContactPerson"></CustomLabelAndLabel>
+            <CustomLabelAndLabel FirstText="Contact Phone" SecondText="@ContactPhone"></CustomLabelAndLabel>
         </MudGrid>
         <MudDivider DividerType="DividerType.FullWidth" Class="my-4"></MudDivider>
         <MudGrid Spacing="2">
-            <CustomRowWithTwoLabels FirstText="Delivery Service Name" SecondText="@DeliveryServiceName"></CustomRowWithTwoLabels>
-            <CustomRowWithTwoLabels FirstText="Contact Person" SecondText="@DeliveryContactPerson"></CustomRowWithTwoLabels>
-            <CustomRowWithTwoLabels FirstText="Contact Phone" SecondText="@DeliveryContactPhone"></CustomRowWithTwoLabels>
+            <CustomLabelAndLabel FirstText="Delivery Service Name" SecondText="@DeliveryServiceName"></CustomLabelAndLabel>
+            <CustomLabelAndLabel FirstText="Contact Person" SecondText="@DeliveryContactPerson"></CustomLabelAndLabel>
+            <CustomLabelAndLabel FirstText="Contact Phone" SecondText="@DeliveryContactPhone"></CustomLabelAndLabel>
         </MudGrid>
         <MudDivider DividerType="DividerType.FullWidth" Class="my-4"></MudDivider>
         <MudGrid Spacing="2">
-            <CustomRowWithTwoLabels FirstText="Remark" SecondText="@Remark"></CustomRowWithTwoLabels>
-            <CustomRowWithTwoLabels FirstText="Delivery Fees" SecondText="@DeliveryFees.ToString()"></CustomRowWithTwoLabels>
+            <CustomLabelAndLabel FirstText="Remark" SecondText="@Remark"></CustomLabelAndLabel>
+            <CustomLabelAndLabel FirstText="Delivery Fees" SecondText="@DeliveryFees.ToString()"></CustomLabelAndLabel>
         </MudGrid>
         <MudDivider DividerType="DividerType.FullWidth" Class="mt-4"></MudDivider>
     </DialogContent>
