--- a/Friday.ERP.Client/Shared/Components/Molecules/CustomLabelAndLabel.razor
+++ b/Friday.ERP.Client/Shared/Components/Molecules/CustomLabelAndLabel.razor
@@ -1,10 +1,10 @@
-<CustomRowWithLabelAndInput Sm="@FirstSm" Md="@FirstMd" FirstText="@FirstText" Typo="@Typo">
+<CustomLabelAndInput Sm="@FirstSm" Md="@FirstMd" FirstText="@FirstText" Typo="@Typo">
     <MudItem sm="SecondSm" md="@SecondMd" Class="align-self-center">
         <MudText Typo="Typo.subtitle1" Align="@SecondTextAlign" Color="@SecondTextColor">
             @SecondText
         </MudText>
     </MudItem>
-</CustomRowWithLabelAndInput>
+</CustomLabelAndInput>
 
 
 @code {
