--- a/Friday.ERP.Client/Shared/Components/Molecules/CustomLableAndAutocomplete.razor
+++ b/Friday.ERP.Client/Shared/Components/Molecules/CustomLableAndAutocomplete.razor
@@ -1,11 +1,11 @@
-<CustomRowWithLabelAndInput Sm="@FirstSm" Md="@FirstMd" FirstText="@FirstText" Typo="@Typo">
+<CustomLabelAndInput Sm="@FirstSm" Md="@FirstMd" FirstText="@FirstText" Typo="@Typo">
     <MudItem sm="SecondSm" md="@SecondMd" Class="align-self-center">
         <MudAutocomplete T="string?" Required="@Required" Dense="true" FullWidth="true" ResetValueOnEmptyText="true" Immediate="true"
                          Clearable="@Clearable" OnClearButtonClick="@OnClearButtonClick"
                          Variant="Variant.Outlined" Margin="Margin.Dense" Value="@Value"
                          SearchFuncWithCancel="@SearchFuncWithCancel" ValueChanged="@ValueChanged"/>
     </MudItem>
-</CustomRowWithLabelAndInput>
+</CustomLabelAndInput>
 
 
 @code {
