--- a/Friday.ERP.Client/Shared/Components/Molecules/CustomLableAndCheckbox.razor
+++ b/Friday.ERP.Client/Shared/Components/Molecules/CustomLableAndCheckbox.razor
@@ -1,15 +1,13 @@
-<CustomRowWithLabelAndInput Sm="@FirstSm" Md="@FirstMd" FirstText="@FirstText" Typo="@Typo">
+<CustomLabelAndInput Sm="@FirstSm" Md="@FirstMd" FirstText="@FirstText" Typo="@Typo">
     <MudItem sm="SecondSm" md="@SecondMd" Class="align-self-center">
-        <MudTextField T="long" @bind-Value="@BindValue" Required="@Required" Immediate="true"
-                      FullWidth="true" InputType="@KeyboardInputType"
-                      Margin="Margin.Dense" Variant="Variant.Outlined">
-        </MudTextField>
+        <MudCheckBox T="bool" @bind-Value="@BindValue" Required="@Required" Immediate="true"
+                     Color="Color.Default">
+        </MudCheckBox>
     </MudItem>
-</CustomRowWithLabelAndInput>
+</CustomLabelAndInput>
 
 
 @code {
-
     [Parameter] public int FirstSm { get; set; } = 5;
 
     [Parameter] public int FirstMd { get; set; } = 5;
@@ -17,13 +15,13 @@
     [Parameter] public int SecondSm { get; set; } = 7;
 
     [Parameter] public int SecondMd { get; set; } = 7;
-    
+
     [Parameter] public string? FirstText { get; set; }
 
     [Parameter] public Typo Typo { get; set; } = Typo.body1;
 
     [Parameter]
-    public long BindValue
+    public bool BindValue
     {
         get => _bindValue;
         set
@@ -36,10 +34,8 @@
 
     [Parameter] public bool Required { get; set; }
 
-    [Parameter] public InputType KeyboardInputType { get; set; } = InputType.Number;
+    [Parameter] public EventCallback<bool> BindValueChanged { get; set; }
 
-    [Parameter] public EventCallback<long> BindValueChanged { get; set; }
-
-    private long _bindValue;
+    private bool _bindValue;
 
 }
