--- a/Friday.ERP.Client/Pages/Invoice/Dialogs/TransactionInfoDialog.razor
+++ b/Friday.ERP.Client/Pages/Invoice/Dialogs/TransactionInfoDialog.razor
@@ -1,33 +1,33 @@
 <MudDialog>
     <DialogContent>
         <MudGrid Spacing="2">
-            <CustomRowWithTwoLabels FirstText="SubTotal" SecondText="@SubTotal.ToString()"></CustomRowWithTwoLabels>
-            <CustomRowWithTwoLabels FirstText="Discounts" SecondText="@Discount.ToString()"></CustomRowWithTwoLabels>
-            <CustomRowWithTwoLabels FirstText="Discount Type" SecondText="@DiscountType"></CustomRowWithTwoLabels>
+            <CustomLabelAndLabel FirstText="SubTotal" SecondText="@SubTotal.ToString()"></CustomLabelAndLabel>
+            <CustomLabelAndLabel FirstText="Discounts" SecondText="@Discount.ToString()"></CustomLabelAndLabel>
+            <CustomLabelAndLabel FirstText="Discount Type" SecondText="@DiscountType"></CustomLabelAndLabel>
         </MudGrid>
         <MudDivider DividerType="DividerType.FullWidth" Class="my-4"></MudDivider>
         <MudGrid Spacing="2">
-            <CustomRowWithTwoLabels FirstText="Total" SecondText="@Total.ToString()"></CustomRowWithTwoLabels>
+            <CustomLabelAndLabel FirstText="Total" SecondText="@Total.ToString()"></CustomLabelAndLabel>
         </MudGrid>
         <MudDivider DividerType="DividerType.FullWidth" Class="my-4"></MudDivider>
         <MudGrid Spacing="2">
-            <CustomRowWithTwoLabels FirstText="Paid Total" SecondText="@PaidTotal.ToString()"></CustomRowWithTwoLabels>
-            <CustomRowWithTwoLabels FirstText="Credit / Debit Left"
+            <CustomLabelAndLabel FirstText="Paid Total" SecondText="@PaidTotal.ToString()"></CustomLabelAndLabel>
+            <CustomLabelAndLabel FirstText="Credit / Debit Left"
                                     SecondTextColor="@(CreditDebitLeft < 0 ? Color.Error : Color.Dark)"
                                     SecondText="@CreditDebitLeft.ToString()">
-            </CustomRowWithTwoLabels>
+            </CustomLabelAndLabel>
         </MudGrid>
         <MudDivider DividerType="DividerType.FullWidth" Class="my-4"></MudDivider>
         <MudGrid Spacing="2">
-            <CustomRowWithTwoLabels FirstText="Remark" SecondText="@Remark"></CustomRowWithTwoLabels>
+            <CustomLabelAndLabel FirstText="Remark" SecondText="@Remark"></CustomLabelAndLabel>
         </MudGrid>
         <MudDivider DividerType="DividerType.FullWidth" Class="my-4"></MudDivider>
         @if (IsPaid is not null)
         {
             <MudGrid Spacing="2">
-                <CustomRowWithTwoLabels FirstText="IsPaid"
+                <CustomLabelAndLabel FirstText="IsPaid"
                                         SecondText="@(IsPaid)">
-                </CustomRowWithTwoLabels>
+                </CustomLabelAndLabel>
             </MudGrid>
             <MudDivider DividerType="DividerType.FullWidth" Class="mt-4"></MudDivider>
         }
